--- a/css/whitelabel/css/style.css
+++ b/css/whitelabel/css/style.css
@@ -1057,8 +1057,8 @@ form fieldset > section > div{
 	width:78%;
 	float:right;
 	border-left:1px solid;
-	height:100%;
-	min-height:100%;
+	//height:100%;
+	//min-height:100%;
 }
 
 form fieldset > section > div > div{
